--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,8 @@
-astunparse==1.6.3
-wrapt==1.14.1
-pytz==2022.1
-uritemplate==3.0.1
-pexpect==4.8.0
-flatbuffers==2.0
-tensorboard==2.8.0
-decorator==4.4.2
-idna==2.10
-numexpr==2.8.3
-tornado==6.2
-cycler==0.11.0
-cloudpickle==1.3.0
-packaging==21.3
-chardet==3.0.4
-psutil==5.4.8
-ipykernel==6.15.1
-pickleshare==0.7.5
-tblib==1.7.0
+keras==2.8.0
+tensorflow==2.8.2
 pandas==1.3.5
-debugpy==1.0.0
-rsa==4.8
-gast==0.5.3
-pyparsing==3.0.9
-six==1.15.0
-portpicker==1.3.9
-dill==0.3.5.1
-traitlets==5.1.1
-pyarrow==6.0.1
 scipy==1.7.3
-oauth2client==4.1.3
-ptyprocess==0.7.0
-requests==2.23.0
-urllib3==1.24.3
-astor==0.8.1
 numpy==1.21.6
-simplegeneric==0.8.1
-pygments==2.6.1
-pyasn1==0.4.8
-cffi==1.15.1
-termcolor==1.1.0
-jax==0.3.14
 ipywidgets==7.7.1
 kiwisolver==1.4.4
 h5py==3.1.0
-httplib2==0.17.4
-google==2.0.3
-etils==0.6.0
-wcwidth==0.2.5
-zipp==3.8.1
-pathlib==1.0.1
-keras==2.8.0
